refactor to clean arch